--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,11 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+  "username": "root",
+  "password": "Zrp...A29",
+  "database": "railway",
+  "host": "containers-us-west-XYZ.railway.app",
+  "port": "7254",
+  "dialect": "mysql"
   }
 }
